// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link ACT theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1xo9uj5-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ACT_ET theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1glq49i-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURA theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-czfi8w-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1s1nu1b-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1hnefrn-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;
